...
        size="large"
        icon="start"
        fullWidth
        disabled={selectedCategory === undefined}
        label={
          selectedCategory === undefined
            ? 'Pick a category to start'
            : `Start ${selectedCategory.name} session`
        }
        onPress={start}
      />
    </Screen>
  );
...
